# edit-xml

./: .gitignore  CONTRIBUTING.html  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  justfile
.github/: dependabot.yml
.github/workflows/: benchmark.yml  check.yml
benches/: bench.rs  bench_utils.rs  dom_based.rs  event_based.rs
perf-comparison/: Cargo.toml
perf-comparison/benches/: compare.rs  dom_based.rs  event_based.rs
perf-comparison/src/: keep_reading.rs  lib.rs
src/: document.rs  element.rs  error.rs  lib.rs  parser.rs  utils.rs
src/document/: breakdown.rs  node.rs
src/document/node/: breakdown.rs
src/element/: breakdown.rs  builder.rs  debug.rs  sort.rs
src/types/: mod.rs
src/utils/: encoding.rs
tests/: bugs.rs  test_documents.rs  test_parse.rs  test_utils.rs  test_write.rs
tests/documents/doc/: etn_ignws.json  etn_ignws_reqdecl.json  etn_trim.json  etn_trim_ignws_reqdecl.json  everything_disabled.json  ignws.json  reqdecl.json  trim_ignws_reqdecl.json
tests/documents/encoding1/: etn.json  etn_ignws_reqdecl.json  etn_reqdecl.json  etn_trim.json  etn_trim_ignws.json  everything_disabled.json  ignws.json  ignws_reqdecl.json  trim.json  trim_reqdecl.json
tests/documents/encoding2/: etn.json  etn_ignws_reqdecl.json  everything_disabled.json  trim_reqdecl.json
tests/documents/nodes/: etn_ignws.json  etn_trim.json  reqdecl.json
