[package]
name = "edit-xml"
version = "0.1.0"
authors = [
    "Wyatt Herkamp <wherkamp@gmail.com",
    "Yoonchae Lee <bluegreenmagick@gmail.com>",
]
description = "Read, modify and write xml in tree-like structure."
edition = "2021"
repository = "https://github.com/wyatt-herkamp/edit-xml"
license = "MIT OR Apache-2.0"
keywords = ["xml", "parser", "reader", "writer"]
categories = ["parser-implementations", "data-structures", "encoding"]
autobenches = false

[dependencies]
quick-xml = "0.36"
encoding_rs = "0.8"
thiserror = "1"
tracing = "0.1"
ahash = { version = "0.8", optional = true }
memchr = "2"

serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = ["ahash"]
escape-html = ["quick-xml/escape-html"]
# Document Breakdown is a feature that allows a user to breakdown a document into a serialized structure.
# This is used mainly for testing purposes.
document-breakdown = ["serde", "ahash?/serde"]
soft-fail-unescape = []
[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
itertools = "0.13"
anyhow = "1"
minidom = "0.16"
roxmltree = "0.20"
xmltree = "0.11"
xml_dom = "0.2"
# parsers
xml5ever = "0.20"
markup5ever = "0.14"
xml_rs = { version = "0.8", package = "xml-rs" }

edit-xml = { path = ".", features = ["document-breakdown"] }
serde_json = "1.0"
criterion = "0.5"

[[bench]]
name = "dom_based"
path = "benches/dom_based.rs"
harness = false
[[bench]]
name = "event_based"
path = "benches/event_based.rs"
harness = false

[[bench]]
name = "library_benches"
path = "benches/library_benches.rs"
harness = false
