[package]
name = "xml_lib_perf_comparison"
version = "0.1.0"
edition = "2021"
[lib]

[[bin]]
name = "keep_reading"
path = "src/keep_reading.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }


anyhow = "1"


edit-xml = { path = "../", features = ["document-breakdown"] }
xml_dom = "0.2"
minidom = "0.16"
roxmltree = "0.20"
xmltree = "0.11"
criterion = { version = "0.6", features = ["html_reports", "csv_output"] }

[[bench]]
name = "dom_based"
path = "benches/dom_based.rs"
harness = false

[[bench]]
name = "compare"
path = "benches/compare.rs"
harness = false
